bk_ida/gccida/g3/simplify_and_const_int
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8283:37: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_and_const_int( rtx x, machine_mode mode, rtx varop, unsigned __int64 constop) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8329:38: error: use of undeclared identifier 'machine_mode'
v17 = simplify_and_const_int( 0LL, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), *( rtx *)&rtx[1], v8); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8329:92: error: expected expression
v17 = simplify_and_const_int( 0LL, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), *( rtx *)&rtx[1], v8); 
                                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8330:38: error: use of undeclared identifier 'machine_mode'
v18 = simplify_and_const_int( 0LL, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), rtx->fld[0].rtx, v8); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8331:21: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v19 = gen_binary( ( rtx_code)*( _WORD *)rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v18, v17); 
                    ^~~~~~~~
                    rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8331:30: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v19 = gen_binary( ( rtx_code)*( _WORD *)rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v18, v17); 
                  ~~~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8331:48: error: use of undeclared identifier 'machine_mode'
v19 = gen_binary( ( rtx_code)*( _WORD *)rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v18, v17); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8340:50: error: expected expression
v16 = simplify_and_const_int( 0LL, mode, *( rtx *)&rtx[1], v8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8348:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8349:95: error: expected expression
if ( *( _WORD *)v10.rtwint == 63 && *( unsigned __int8 *)( v10.rtwint + 2) == mode && *( rtx *)( v10.rtwint + 8) == rtx ) 
                                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8364:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8368:18: error: expected expression
do_SUBST( ( rtx *)&x[1], v22); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/combine.c:8372:18: error: expected expression
do_SUBST( ( rtx *)x->fld, v23); 
                 ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_and_const_int/src/obj/combine.o] Error 1
